<resources>
    <string name="app_name">Bhinneka</string>
    <string name="name">Nama Jajanan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="calorie">Kalori</string>
    <string name="carbs">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="fat">Lemak</string>
    <string name="natrium">Natrium</string>
    <string name="kalium">Kalium</string>
    <string name="recipe">Resep</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="email">E-mail\n</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_google">Sign In dengan Google</string>
    <string name="about">About</string>
    <string name="detection_button">Ambil gambar</string>
    <string name="history">Riwayat</string>
    <string name="jajanan">Jajanan</string>
    <string name="date">20/05/2024</string>
    <string name="edit_jajanan">Edit Jajanan</string>
    <string name="save">Simpan</string>
    <string name="logout">Logout</string>
    <string name="prediction_result">Hasil Klasifikasi Gambar</string>
    <string name="menu_gallery">Galeri</string>
    <string name="menu_camera">Kamera\n</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="error_password">Password minimal terdiri dari 8 karakter</string>
    <string name="error_email">Format email invalid!</string>
    <string name="click_to_register">Belum punya akun? Tap untuk registrasi atau,</string>
    <string name="sign_up">Sign Up</string>
    <string name="empty_field_alert">Field tidak boleh kosong!</string>
    <string name="no_history">Riwayat belum ada.</string>
    <string name="username">Username</string>
    <string name="output">OutPut:</string>
    <string name="upload_image">Upload Gambar</string>
    <string name="delete_jajanan">Hapus Jajanan</string>
    <string name="delete_prompt">Anda yakin akan menghapus data %1$s?</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="welcome">Selamat datang, %1$s</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec enim non diam luctus tincidunt a a justo. Sed euismod, nisl eget tincidunt ultricies, nunc nisl aliquam nisl, eget aliquam nisl eu nisl. Donec a lacus vel turpis consectetur laoreet. Nulla facilisi. Sed elementum, tortor non consequat faucibus, lectus nibh ullamcorper eros, eu egestas enim velit vel orci.</string>
    <string name="resizable_text_read_more">more...</string>
    <string name="resizable_text_read_less">less...</string>
    <string name="_220">220</string>
    <string name="match_number">Tingkat kecocokan: 90%</string>
    <string name="description_and_history">Deskripsi dan sejarah</string>
    <string name="recipe_result">Resep:</string>
    <string name="basic_metabolic_need">Angka Kebutuhan Gizi (AKG)</string>
    <string name="default_metabolic">2200 kkal</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="body_weight">Berat Badan</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="gender_prompt">Apa jenis kelamin Anda?</string>
    <string name="body_height">Tinggi Badan</string>
    <string name="age">Usia</string>
    <string name="exercise_prompt">Seberapa sering Anda olahraga?</string>
    <string name="choose_one">Pilih satu</string>
    <string name="akg">AKG</string>
    <string name="akg_2200">AKG: 2200</string>
    <string name="calculate_akg">Tap untuk Kalkulasi AKG</string>
    <string name="tagline">Kenali Budaya, Perhatikan Gizi</string>
    <string name="sign_in_guest">Masuk tanpa Akun</string>
    <string name="guest_no_history">Buat akun untuk mengaktifkan fitur riwayat.</string>
    <string-array name="exercise_items">
        <item>
            Sangat jarang berolahraga
        </item>
        <item>
            Jarang olahraga (1-3 kali per minggu)
        </item>
        <item>
            Cukup olahraga (3-5 kali per minggu)
        </item>
        <item>
            Sering olahraga (6-7 kali per minggu)
        </item>
        <item>
            Sangat sering olahraga (sekitar 2 kali dalam sehari)
        </item>
    </string-array>
</resources>