<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:visibility="invisible"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:indeterminate="true" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:text="@string/sign_in"
        android:textColor="?colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/il_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_banner"
        app:layout_constraintStart_toStartOf="@+id/iv_banner"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner">

        <com.bayu.bhinneka.component.CustomEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxWidth="300dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="@+id/il_email"
        app:layout_constraintStart_toStartOf="@+id/il_email"
        app:layout_constraintTop_toBottomOf="@+id/il_email">

        <com.bayu.bhinneka.component.CustomEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxWidth="300dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/il_password"
        app:layout_constraintStart_toStartOf="@+id/il_password"
        app:layout_constraintTop_toBottomOf="@+id/il_password" />

    <Button
        android:id="@+id/btn_sign_in_google"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:textColor="?colorPrimary"
        android:text="@string/sign_in_google"
        app:icon="@drawable/img_google"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <TextView
        android:id="@+id/txt_create_account"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:text="@string/click_to_register"
        android:textColor="?colorSecondary"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in_google"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />


</androidx.constraintlayout.widget.ConstraintLayout>