<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="?colorPrimaryContainer"
        android:theme="@style/Widget.Material3.CollapsingToolbar.Medium"
        app:titleTextColor="?colorOnPrimaryContainer"
        app:iconTint="?colorOnPrimaryContainer"
        app:titleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/txt_username"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/btn_detection"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_menu" />

    <Button
        android:id="@+id/btn_detection"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/detection_button"
        app:icon="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_username" />

    <TextView
        android:id="@+id/txt_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/history"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_detection" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_list_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_history"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_history"
        android:textColor="?colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_history" />



</androidx.constraintlayout.widget.ConstraintLayout>